Tue Jul  7 13:36:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (DEFINE_ENUMFUNCS): included function signature.

	* enum.c (rb_enum_join): non-nil separator must be convertible to
	  String.  [ruby-core:24172]

Tue Jul  7 12:47:28 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (rb_enum_join): should propagate taint to the return
	  value.  the change was overridden by r23967.  [ruby-core:24176]

Tue Jul  7 11:56:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (GC_PROF_SET_MALLOC_INFO, GC_PROF_SET_HEAP_INFO): simplified.

Tue Jul  7 10:12:37 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_ext_int_to_encs): Set external encoding if
	  ext==intern. [ruby-dev:38278]

Mon Jul  6 09:31:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (make_curry_proc): should propagate lambda-ness.
	  [ruby-core:24127]

	* proc.c (proc_hash): use long.

Mon Jul  6 09:06:49 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_module.rb (TestModule#test_undef): adjust to
	  message change.

	* test/ruby/test_object.rb (TestObject#test_redefine_method_which_may_case_serious_problem): ditto.

	* test/ruby/test_object.rb (TestObject#test_remove_method): ditto.

Mon Jul  6 09:04:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (enum_join): deals with self recursive objects to get rid
	  of infinite recursion.  [ruby-core:24150]

Mon Jul  6 08:00:10 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (enum_to_a): should propagate taint to the return value.
	  [ruby-core:24152]

	* enum.c (enum_sort_by): ditto.

Mon Jul  6 00:41:41 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c: edited rdoc.

Sun Jul  5 23:55:57 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (find_time_t): fix Time.local(2009,2,31) failure on 64bit
	  time_t environment.

Sun Jul  5 22:43:13 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_s_polar): now arg is optional.
